# safedump

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  privacy.md
docs/examples/: basic_usage.py  custom_redaction.py  custom_serializer.py  manual_capture.py  production_config.py  programmatic_load.py
src/safedump/: __init__.py  _capture.py  _cli.py  _config.py  _loader.py  _render.py  _sanitize.py  _serialize.py  _storage.py  _types.py
tests/: conftest.py  test_cli.py  test_config.py  test_integration.py  test_render.py  test_sanitize.py  test_serialize.py  test_storage.py  test_types.py
tests/fixtures/: deep_recursion.py  large_locals.py  nested_exception.py  secret_containing.py  simple_zero_division.py
