[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safedump"
version = "0.1.0"
description = "Local-first crash diagnostics framework for Python. Capture debugging context, redact secrets, inspect crashes offline."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Muneer Alam", email = "muneer.alam320@gmail.com" }
]
keywords = [
    "crash",
    "debugging",
    "traceback",
    "diagnostics",
    "devtools",
    "exception",
    "error-handling",
    "development",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
view = ["rich>=13.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "coverage>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Muneer320/safedump"
Repository = "https://github.com/Muneer320/safedump"
Issues = "https://github.com/Muneer320/safedump/issues"
Discussions = "https://github.com/Muneer320/safedump/discussions"
Documentation = "https://github.com/Muneer320/safedump#readme"
Changelog = "https://github.com/Muneer320/safedump/blob/main/CHANGELOG.md"

[project.scripts]
safedump = "safedump._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/safedump"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/docs", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
timeout = 30
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require subprocess)",
    "performance: marks tests as performance tests (sensitive to runner speed)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/safedump"]
omit = ["src/safedump/_cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]
per-file-ignores = {}

[tool.ruff.lint.isort]
known-first-party = ["safedump"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true
